refractor(css): auth pages contrast fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -870,7 +870,7 @@ select option[value=""] {
 }
 
 h2+p>a {
-    color: #e2b52e;
+    color: #8e721d;
 }
 
 .forgot-password:hover,
